compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__records__field_named_constructor_is_escaped.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub type Wibble {\n  Wibble(constructor: fn() -> Wibble)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(constructor: fn() -> Wibble)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor(constructor) {
    super();
    this.constructor$ = constructor;
  }
}
export function Wibble$Wibble(constructor) {
  return new Wibble(constructor);
}
export function Wibble$isWibble(value) {
  return value instanceof Wibble;
}
