compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__records__field_named_prototype_is_escaped.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub type Wibble {\n  Wibble(prototype: String)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(prototype: String)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor(prototype) {
    super();
    this.prototype$ = prototype;
  }
}
export const Wibble$Wibble = (prototype) => new Wibble(prototype);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$prototype = (value) => value.prototype$;
