compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__records__field_named_then_is_escaped.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub type Wibble {\n  Wibble(then: fn() -> Int)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(then: fn() -> Int)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor(then$) {
    super();
    this.then$ = then$;
  }
}
export function Wibble$Wibble(then$) {
  return new Wibble(then$);
}
export function Wibble$isWibble(value) {
  return value instanceof Wibble;
}
export function Wibble$Wibble$then(value) {
  return value.then$;
}
