compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__records__field_named_x0.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub type Wibble {\n  Wibble(Int, x0: String)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, x0: String)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor($0, x0) {
    super();
    this[0] = $0;
    this.x0 = x0;
  }
}
export const Wibble$Wibble = ($0, x0) => new Wibble($0, x0);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$0 = (value) => value[0];
export const Wibble$Wibble$x0 = (value) => value.x0;
