compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__records__record_with_variants_typescript.snap
---
source: compiler-core/src/javascript/tests/records.rs
expression: "\npub type Test {\n  Test1()\n  Test2()\n}\n"
---
import type * as _ from "../gleam.d.mts";

export class Test1 extends _.CustomType {
  private __brand: void;
}

export class Test2 extends _.CustomType {
  private __brand: void;
}

export type Test$ = Test1 | Test2;
